--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@clerk/nextjs": "^6.9.6",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^5.14.0",
+    "@langchain/community": "^0.3.22",
+    "@langchain/core": "^0.3.27",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -64,6 +66,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "geist": "^1.3.0",
+    "ignore": "^5.3.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "^15.0.1",
